cleared up documentation still not sure if my vignette is working

--- a/readme.html
+++ b/readme.html
@@ -63,7 +63,7 @@ img {
 
 <div id="welcome-to-the-guelph-package" class="section level1">
 <h1>Welcome to the guelph package!</h1>
-<p>This package has been created for the <a href="http://stat545-ubc.github.io/">STAT547</a> class, and was made to manage factors in a less headache-inducing way. Guelph contains the following functions:<br /><code>fbind()</code> <code>freq_out()</code><br /><code>countlevels()</code><br /><code>factorchars()</code><br />***** ## Installation<br />Guelph can be installed with devtools <code>devtools::install_github(&quot;samhinshaw/guelph&quot;)</code><br />and loaded with <code>library(guelph)</code><br />***** ## Some Notes</p>
+<p>This package has been created for the <a href="http://stat545-ubc.github.io/">STAT547</a> class, and was made to manage factors in a less headache-inducing way. Guelph contains the following functions:<br /><code>fbind()</code> - combine two factors<br /><code>freq_out()</code> - create a frequency table for the occurences of levels in a factor<br /><code>countlevels()</code> - check which rows of factors in your data.frame should or shouldn’t be factors<br /><code>factorchars()</code> - quickly convert a specified column from a factor to a character<br />***** ## Installation<br />Guelph can be installed with devtools <code>devtools::install_github(&quot;samhinshaw/guelph&quot;)</code><br />and loaded with <code>library(guelph)</code><br />***** ## Some Notes</p>
 <div id="further-goals" class="section level4">
 <h4>1. Further Goals</h4>
 <p>If I had more time, I would combine the functions <code>countlevels()</code> and <code>factorchars()</code>. This would allow me to easily check if a column has the same number of levels as rows, and coerce it to characters!</p>
